<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title"
        android:text="@string/title"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        android:gravity="center_horizontal|center"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/detail_margin"
        android:layout_marginTop="@dimen/detail_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_detail_image"
            android:contentDescription="@string/show"
            android:src="@drawable/miss_sloane"
            android:layout_width="200dp"
            android:layout_height="290dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_detail_release_date"
                android:text="@string/release_date"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_detail_user_rating"
                android:text="@string/user_rating"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_detail_description"
        android:layout_marginTop="@dimen/detail_margin"
        android:text="@string/overview"
        android:textColor="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        android:layout_marginStart="@dimen/detail_margin"
        android:layout_marginEnd="@dimen/detail_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>

</ScrollView>